--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,14 +25,14 @@
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
-                        <form action="#" th:action="@{/home}" enctype="multipart/form-data" method="POST">
+                        <form action="#" th:action="@{/file/upload}" enctype="multipart/form-data" method="POST">
                             <div class="container">
                                 <div class="row" style="margin: 1em;">
                                     <div class="col-sm-2">
                                         <label for="fileUpload">Upload a New File:</label>
                                     </div>
                                     <div class="col-sm-6">
-                                        <input type="file" class="form-control-fileForm" id="fileUpload" name="fileUpload">
+                                        <input type="file" class="form-control-fileModel" id="fileUpload" name="fileUpload">
                                     </div>
                                     <div class="col-sm-4">
                                         <button type="submit" class="btn btn-dark">Upload</button>
@@ -52,7 +52,7 @@
                                 <tr>
                                     <td>
                                         <a target="_blank" class="btn btn-success">View</a>
-                                        <a  class="btn btn-danger">Delete</a>
+                                        <a  th:href="@{/file/delete/{id}(id=${file.getFileId()})}"  class="btn btn-danger">Delete</a>
                                     </td>
                                     <th th:text="${file.getFilename()}" scope="row">ExampleFile.txt</th>
                                 </tr>
@@ -98,14 +98,14 @@
                                     </div>
                                     <div class="modal-body">
                                         <form action="#" method="POST">
-                                            <input type="hidden" name="noteId" id="note-id">
+                                            <input type="hidden" name="noteId" id="noteModel-id">
                                             <div class="form-group">
-                                                <label for="note-title" class="col-form-label">Title</label>
-                                                <input type="text" name= "noteTitle" class="form-control" id="note-title" maxlength="20" required>
+                                                <label for="noteModel-title" class="col-form-label">Title</label>
+                                                <input type="text" name= "noteTitle" class="form-control" id="noteModel-title" maxlength="20" required>
                                             </div>
                                             <div class="form-group">
-                                                <label for="note-description" class="col-form-label">Description</label>
-                                                <textarea class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required></textarea>
+                                                <label for="noteModel-description" class="col-form-label">Description</label>
+                                                <textarea class="form-control" name="noteDescription" id="noteModel-description" rows="5" maxlength="1000" required></textarea>
                                             </div>
                                             <button id="noteSubmit" type="submit" class="d-none"></button>
                                         </form>
@@ -158,18 +158,18 @@
                                     </div>
                                     <div class="modal-body">
                                         <form action="#" method="POST">
-                                            <input type="hidden" name="credentialId" id="credential-id">
+                                            <input type="hidden" name="credentialId" id="credentialModel-id">
                                             <div class="form-group">
-                                                <label for="note-title" class="col-form-label">URL</label>
-                                                <input type="text" name= "url" class="form-control" id="credential-url" maxlength="100" required>
+                                                <label for="noteModel-title" class="col-form-label">URL</label>
+                                                <input type="text" name= "url" class="form-control" id="credentialModel-url" maxlength="100" required>
                                             </div>
                                             <div class="form-group">
-                                                <label for="note-title" class="col-form-label">Username</label>
-                                                <input type="text" name= "username" class="form-control" id="credential-username" maxlength="30" required>
+                                                <label for="noteModel-title" class="col-form-label">Username</label>
+                                                <input type="text" name= "username" class="form-control" id="credentialModel-username" maxlength="30" required>
                                             </div>
                                             <div class="form-group">
-                                                <label for="note-title" class="col-form-label">Password</label>
-                                                <input type="text" name= "password" class="form-control" id="credential-password" maxlength="30" required>
+                                                <label for="noteModel-title" class="col-form-label">Password</label>
+                                                <input type="text" name= "password" class="form-control" id="credentialModel-password" maxlength="30" required>
                                             </div>
                                             <button id="credentialSubmit" type="submit" class="d-none"></button>
                                         </form>
@@ -190,22 +190,22 @@
         <script th:src="@{/js/popper.min.js}"></script>
         <script th:src="@{/js/bootstrap.min.js}"></script>
 
-        <!--For opening the note modal-->
+        <!--For opening the noteModel modal-->
         <script type="text/javascript">
-            // For opening the note modal
+            // For opening the noteModel modal
             function showNoteModal(noteId, noteTitle, noteDescription) {
-                $('#note-id').val(noteId ? noteId : '');
-                $('#note-title').val(noteTitle ? noteTitle : '');
-                $('#note-description').val(noteDescription ? noteDescription : '');
+                $('#noteModel-id').val(noteId ? noteId : '');
+                $('#noteModel-title').val(noteTitle ? noteTitle : '');
+                $('#noteModel-description').val(noteDescription ? noteDescription : '');
                 $('#noteModal').modal('show');
             }
 
             // For opening the credentials modal
             function showCredentialModal(credentialId, url, username, password) {
-                $('#credential-id').val(credentialId ? credentialId : '');
-                $('#credential-url').val(url ? url : '');
-                $('#credential-username').val(username ? username : '');
-                $('#credential-password').val(password ? password : '');
+                $('#credentialModel-id').val(credentialId ? credentialId : '');
+                $('#credentialModel-url').val(url ? url : '');
+                $('#credentialModel-username').val(username ? username : '');
+                $('#credentialModel-password').val(password ? password : '');
                 $('#credentialModal').modal('show');
             }
         </script>
