--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -51,7 +51,8 @@
                                 <tbody th:each="file : ${files}">
                                 <tr>
                                     <td>
-                                        <a target="_blank" class="btn btn-success">View</a>
+                                        <a target="_blank" th:href="@{/file/download/{id}(id=${file.getFileId()})}"
+                                           class="btn btn-success">View</a>
                                         <a  th:href="@{/file/delete/{id}(id=${file.getFileId()})}"  class="btn btn-danger">Delete</a>
                                     </td>
                                     <th th:text="${file.getFilename()}" scope="row">ExampleFile.txt</th>
