--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
 
-                        <form th:object="${noteModel}" action="#" th:action="@{/note/create}" method="POST">
+                        <form th:object="${noteModel}" action="#" th:action="@{/note/new}" method="POST">
                         <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
                             + Add a New Note
                         </button>
@@ -81,8 +81,20 @@
                                 <tbody th:each="note : ${notes}">
                                     <tr>
                                         <td >
-                                            <btton type="button" class="btn btn-success">Edit</btton>
-                                            <a th:href="@{/note/delete/{id}(id=${note.getNoteId()})}" class="btn btn-danger">Delete</a>
+                                            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                                                <div class="btn-group mr-2" role="group" aria-label="First group">
+                                                    <form action="#" th:object="${noteModel}" th:action="@{/note/edit}" method="POST">
+                                                        <button type="button" class="btn btn-success" th:attr="onclick=|showNoteModal('${note.getNoteId()}', '${note.getNoteTitle()}', '${note.getNoteDescription()}')|">
+                                                            Edit
+                                                        </button>
+                                                    </form>
+                                                </div>
+                                                <div class="btn-group mr-2" role="group" aria-label="Second group">
+                                                    <form action="#" th:action="@{/note/delete/{id}(id=${note.getNoteId()})}" method="POST">
+                                                        <button class="btn btn-danger">Delete</button>
+                                                    </form>
+                                                </div>
+                                            </div>
                                         </td>
                                         <th th:text="${note.getNoteTitle()}"  scope="row">Example Note Title</th>
                                         <td th:text="${note.getNoteDescription()}"> Example Note Description </td>
