--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -78,13 +78,13 @@
                                         <th style="width: 60%" scope="col">Description</th>
                                     </tr>
                                 </thead>
-                                <tbody th:each="note : ${notes}">
+                                <tbody th:each="note : ${notes}" th:object="${notes}">
                                     <tr>
                                         <td >
                                             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                                 <div class="btn-group mr-2" role="group" aria-label="First group">
-                                                    <form action="#" th:object="${noteModel}" th:action="@{/note/edit}" method="POST">
-                                                        <button type="button" class="btn btn-success" th:attr="onclick=|showNoteModal('${note.getNoteId()}', '${note.getNoteTitle()}', '${note.getNoteDescription()}')|">
+                                                    <form action="#" th:object="${note}" th:action="@{/note/edit}" method="PATCH">
+                                                        <button type="button" class="btn btn-success" th:onchick="|showNoteModal('${note.getNoteId()}', '${note.getNoteTitle()}', '${note.getNoteDescription()}')|">
                                                             Edit
                                                         </button>
                                                     </form>
@@ -135,12 +135,15 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
-                        <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
-                            + Add a New Credential
-                        </button>
+
+                        <form th:object="${credentialModel}" action="#" th:action="@{/credential/new}" method="POST">
+                            <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
+                                + Add a New Credential
+                            </button>
+                        <form>
 
                         <div class="table-responsive">
-                            <table class="table table-striped" th:object="${credentials}" id="credentialTable">
+                            <table class="table table-striped" id="credentialTable">
                                 <thead>
                                     <tr>
                                         <th style="width: 20%" scope="col"></th>
@@ -150,14 +153,26 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
-                                    <td>
-                                        <button type="button" class="btn btn-success">Edit</button>
-                                        <a class="btn btn-danger">Delete</a>
+                                <tr th:each="credential : ${credentials}" th:object="${credentials}">
+                                    <td >
+                                        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                                            <div class="btn-group mr-2" role="group" aria-label="First group">
+                                                <form action="#" th:object="${credential}" th:action="@{/credential/edit}" method="PATCH">
+                                                    <button type="button" class="btn btn-success" th:onchick="|showCredentialModal('${credential.getCredentialId()}', '${credential.getUrl()}', '${credential.getUsername()}', '${credential.getPassword()}')|">
+                                                        Edit
+                                                    </button>
+                                                </form>
+                                            </div>
+                                            <div class="btn-group mr-2" role="group" aria-label="Second group">
+                                                <form action="#" th:action="@{/credential/delete/{id}(id=${credential.getCredentialId()})}" method="POST">
+                                                    <button class="btn btn-danger">Delete</button>
+                                                </form>
+                                            </div>
+                                        </div>
                                     </td>
-                                    <th scope="row">Example Credential URL</th>
-                                    <td>Example Credential Username</td>
-                                    <td>Example Credential Password</td>
+                                    <th th:text="${credential.getUrl()}" scope="row">Example Credential URL</th>
+                                    <td th:text="${credential.getUsername()}" >Example Credential Username</td>
+                                    <td th:text="${credential.getPassword()}" >Example Credential Password</td>
                                 </tr>
                                 </tbody>
                             </table>
