--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,11 +63,9 @@
                     </div>
                     <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
 
-                        <form th:object="${noteModel}" action="#" th:action="@{/note/new}" method="POST">
                         <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
                             + Add a New Note
                         </button>
-                        <form>
 
                         <div class="table-responsive">
                             <table class="table table-striped" id="userTable">
@@ -83,11 +81,9 @@
                                         <td >
                                             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                                 <div class="btn-group mr-2" role="group" aria-label="First group">
-                                                    <form action="#" th:object="${note}" th:action="@{/note/edit}" method="PATCH">
-                                                        <button type="button" class="btn btn-success" th:onchick="|showNoteModal('${note.getNoteId()}', '${note.getNoteTitle()}', '${note.getNoteDescription()}')|">
+                                                    <button type="button" class="btn btn-success" th:attr="onclick=|showNoteModal('${note.getNoteId()}', '${note.getNoteTitle()}', '${note.getNoteDescription()}')|">
                                                             Edit
-                                                        </button>
-                                                    </form>
+                                                    </button>
                                                 </div>
                                                 <div class="btn-group mr-2" role="group" aria-label="Second group">
                                                     <form action="#" th:action="@{/note/delete/{id}(id=${note.getNoteId()})}" method="POST">
@@ -113,7 +109,7 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="#" method="POST">
+                                        <form th:object="${noteModel}" action="#" th:action="@{/note}" method="POST">
                                             <input type="hidden" name="noteId" id="noteModel-id">
                                             <div class="form-group">
                                                 <label for="noteModel-title" class="col-form-label">Title</label>
@@ -136,11 +132,9 @@
                     </div>
                     <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
 
-                        <form th:object="${credentialModel}" action="#" th:action="@{/credential/new}" method="POST">
-                            <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
-                                + Add a New Credential
-                            </button>
-                        <form>
+                       <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
+                           + Add a New Credential
+                       </button>
 
                         <div class="table-responsive">
                             <table class="table table-striped" id="credentialTable">
@@ -157,11 +151,9 @@
                                     <td >
                                         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                                             <div class="btn-group mr-2" role="group" aria-label="First group">
-                                                <form action="#" th:object="${credential}" th:action="@{/credential/edit}" method="PATCH">
-                                                    <button type="button" class="btn btn-success" th:onchick="|showCredentialModal('${credential.getCredentialId()}', '${credential.getUrl()}', '${credential.getUsername()}', '${credential.getPassword()}')|">
-                                                        Edit
-                                                    </button>
-                                                </form>
+                                              <button type="button" class="btn btn-success" th:attr="onclick=|showCredentialModal('${credential.getCredentialId()}', '${credential.getUrl()}', '${credential.getUsername()}', '${credential.getPassword()}')|">
+                                                    Edit
+                                              </button>
                                             </div>
                                             <div class="btn-group mr-2" role="group" aria-label="Second group">
                                                 <form action="#" th:action="@{/credential/delete/{id}(id=${credential.getCredentialId()})}" method="POST">
@@ -188,7 +180,7 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="#" method="POST">
+                                        <form th:object="${credentialModel}" action="#" th:action="@{/credential}" method="POST">
                                             <input type="hidden" name="credentialId" id="credentialModel-id">
                                             <div class="form-group">
                                                 <label for="noteModel-title" class="col-form-label">URL</label>
