--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -146,7 +146,7 @@
                     </div>
                     <div class="tab-pane fade" th:classappend="${navTab} == 'credentials' ? 'show active' : ''" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
 
-                       <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
+                       <button id="add-credential-button" style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showCredentialModal()">
                            + Add a New Credential
                        </button>
 
@@ -176,7 +176,7 @@
                                             </div>
                                         </div>
                                     </td>
-                                    <th th:text="${credential.getUrl()}" scope="row">Example Credential URL</th>
+                                    <th class="" th:text="${credential.getUrl()}" scope="row">Example Credential URL</th>
                                     <td th:text="${credential.getUsername()}" >Example Credential Username</td>
                                     <td th:text="${credential.getEncryptedPassword()}" >Example Credential Password</td>
                                 </tr>
@@ -213,7 +213,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
+                                        <button id="credentialSaveChanges" type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
