complete unit test

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -212,8 +212,8 @@
                                         </form>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button id="credentialSaveChangesButton" type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
+                                        <button id="credentialModelCloseButton" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button id="credentialModelSaveChangesButton" type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
