--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,13 @@
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container">
             <div th:if="${error}" class="alert alert-warning alert-dismissible fade show" role="alert">
-                <strong>alert!</strong> <span th:text="${error}"></span>
+                <strong>Error</strong> <span th:text="${error}"></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div th:if="${success}" class="alert alert-success alert-dismissible fade show" role="alert">
+                <span>Your changes were successfully saved</span>
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -245,6 +251,13 @@
                 $('#credentialModel-password').val(password ? password : '');
                 $('#credentialModal').modal('show');
             }
+
+            $(document).ready(function() {
+                // show the alert
+                setTimeout(function() {
+                    $(".alert").alert('close');
+                }, 2000);
+            });
         </script>
     </body>
 </html>
